test/tests/operators/match/error_non_last_record_rest.txt
error: irrefutable match arm must be last
 --> tests/operators/match/error_non_last_record_rest.tql:7:3
  |
7 |   {..} => {
  |   ^ 
  |
